Setup `fuzz-prettier-plugin-astro`

--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "format": "prettier --parser astro"
+  },
+  "devDependencies": {
+    "prettier": "^2.6.1",
+    "prettier-plugin-astro": "^0.0.12"
+  }
 }
